study/flex-and-bison/flex/fb1-5/fb1-5.y
%{
#include <stdio.h>
%}
//
//%union{
//	int intval;
//	char *strval;
//}

//%token <intval> NUMBER
//%token <strval> ADD SUB MUL DIV ABS
//%token <strval> EOL


%token  NUMBER
%token ADD SUB MUL DIV ABS
%token  EOL
%token OP CP IF ELSE
%token COMMENT

//%type <intval> NUMBER
//%type <strval> ADD SUB MUL DIV ABS EOL
//%type <strval> calclist exp factor
//%type <intval> term

//%start calclist

%%

calclist:
	| calclist exp EOL  { printf(" = %d\n", $2); }
	;

exp:	factor /*default	$$ = $1*/
	| exp ADD factor	{ $$ = $1 + $3; }
	| exp SUB factor	{ $$ = $1 - $3; }
	;

factor:	term			{  $$ = $1;	}
	| factor MUL term	{ $$ = $1 * $3; }
	| factor DIV term	{ $$ = $1 / $3; }
	;

term:	NUMBER 			{  $$ = $1;	}
	| ABS term	{ $$ = $2 > 0 ? $2 : -$2; }
	| OP exp CP	{ $$ = $2; }
	| IF OP exp CP  { $$ = $3; }
	| COMMENT	{ printf("comment = %d\n", $1); $$ = $1; }
	;
%%

int main(int argc, char **argv)
{
	return yyparse();
}

yyerror(char *s)
{
	fprintf(stderr, "error: %s\n", s);
}
