study/flex-and-bison/flex/fb1-5/y.output
Terminals unused in grammar

    ELSE


Grammar

    0 $accept: calclist $end

    1 calclist: %empty
    2         | calclist exp EOL

    3 exp: factor
    4    | exp ADD factor
    5    | exp SUB factor

    6 factor: term
    7       | factor MUL term
    8       | factor DIV term

    9 term: NUMBER
   10     | ABS term
   11     | OP exp CP
   12     | IF OP exp CP
   13     | COMMENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMBER (258) 9
    ADD (259) 4
    SUB (260) 5
    MUL (261) 7
    DIV (262) 8
    ABS (263) 10
    EOL (264) 2
    OP (265) 11 12
    CP (266) 11 12
    IF (267) 12
    ELSE (268)
    COMMENT (269) 13


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    calclist (16)
        on left: 1 2
        on right: 0 2
    exp (17)
        on left: 3 4 5
        on right: 2 4 5 11 12
    factor (18)
        on left: 6 7 8
        on right: 3 4 5 7 8
    term (19)
        on left: 9 10 11 12 13
        on right: 6 7 8 10


State 0

    0 $accept: • calclist $end

    $default  reduce using rule 1 (calclist)

    calclist  go to state 1


State 1

    0 $accept: calclist • $end
    2 calclist: calclist • exp EOL

    $end     shift, and go to state 2
    NUMBER   shift, and go to state 3
    ABS      shift, and go to state 4
    OP       shift, and go to state 5
    IF       shift, and go to state 6
    COMMENT  shift, and go to state 7

    exp     go to state 8
    factor  go to state 9
    term    go to state 10


State 2

    0 $accept: calclist $end •

    $default  accept


State 3

    9 term: NUMBER •

    $default  reduce using rule 9 (term)


State 4

   10 term: ABS • term

    NUMBER   shift, and go to state 3
    ABS      shift, and go to state 4
    OP       shift, and go to state 5
    IF       shift, and go to state 6
    COMMENT  shift, and go to state 7

    term  go to state 11


State 5

   11 term: OP • exp CP

    NUMBER   shift, and go to state 3
    ABS      shift, and go to state 4
    OP       shift, and go to state 5
    IF       shift, and go to state 6
    COMMENT  shift, and go to state 7

    exp     go to state 12
    factor  go to state 9
    term    go to state 10


State 6

   12 term: IF • OP exp CP

    OP  shift, and go to state 13


State 7

   13 term: COMMENT •

    $default  reduce using rule 13 (term)


State 8

    2 calclist: calclist exp • EOL
    4 exp: exp • ADD factor
    5    | exp • SUB factor

    ADD  shift, and go to state 14
    SUB  shift, and go to state 15
    EOL  shift, and go to state 16


State 9

    3 exp: factor •
    7 factor: factor • MUL term
    8       | factor • DIV term

    MUL  shift, and go to state 17
    DIV  shift, and go to state 18

    $default  reduce using rule 3 (exp)


State 10

    6 factor: term •

    $default  reduce using rule 6 (factor)


State 11

   10 term: ABS term •

    $default  reduce using rule 10 (term)


State 12

    4 exp: exp • ADD factor
    5    | exp • SUB factor
   11 term: OP exp • CP

    ADD  shift, and go to state 14
    SUB  shift, and go to state 15
    CP   shift, and go to state 19


State 13

   12 term: IF OP • exp CP

    NUMBER   shift, and go to state 3
    ABS      shift, and go to state 4
    OP       shift, and go to state 5
    IF       shift, and go to state 6
    COMMENT  shift, and go to state 7

    exp     go to state 20
    factor  go to state 9
    term    go to state 10


State 14

    4 exp: exp ADD • factor

    NUMBER   shift, and go to state 3
    ABS      shift, and go to state 4
    OP       shift, and go to state 5
    IF       shift, and go to state 6
    COMMENT  shift, and go to state 7

    factor  go to state 21
    term    go to state 10


State 15

    5 exp: exp SUB • factor

    NUMBER   shift, and go to state 3
    ABS      shift, and go to state 4
    OP       shift, and go to state 5
    IF       shift, and go to state 6
    COMMENT  shift, and go to state 7

    factor  go to state 22
    term    go to state 10


State 16

    2 calclist: calclist exp EOL •

    $default  reduce using rule 2 (calclist)


State 17

    7 factor: factor MUL • term

    NUMBER   shift, and go to state 3
    ABS      shift, and go to state 4
    OP       shift, and go to state 5
    IF       shift, and go to state 6
    COMMENT  shift, and go to state 7

    term  go to state 23


State 18

    8 factor: factor DIV • term

    NUMBER   shift, and go to state 3
    ABS      shift, and go to state 4
    OP       shift, and go to state 5
    IF       shift, and go to state 6
    COMMENT  shift, and go to state 7

    term  go to state 24


State 19

   11 term: OP exp CP •

    $default  reduce using rule 11 (term)


State 20

    4 exp: exp • ADD factor
    5    | exp • SUB factor
   12 term: IF OP exp • CP

    ADD  shift, and go to state 14
    SUB  shift, and go to state 15
    CP   shift, and go to state 25


State 21

    4 exp: exp ADD factor •
    7 factor: factor • MUL term
    8       | factor • DIV term

    MUL  shift, and go to state 17
    DIV  shift, and go to state 18

    $default  reduce using rule 4 (exp)


State 22

    5 exp: exp SUB factor •
    7 factor: factor • MUL term
    8       | factor • DIV term

    MUL  shift, and go to state 17
    DIV  shift, and go to state 18

    $default  reduce using rule 5 (exp)


State 23

    7 factor: factor MUL term •

    $default  reduce using rule 7 (factor)


State 24

    8 factor: factor DIV term •

    $default  reduce using rule 8 (factor)


State 25

   12 term: IF OP exp CP •

    $default  reduce using rule 12 (term)
